activites tasks and interfaces packages added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
             android:name=".SingleArticleActivity"
             android:label="@string/title_activity_single_article" >
         </activity>
+        <activity
+            android:name=".activities.CommentsActivity"
+            android:label="@string/title_activity_comment" >
+        </activity>
     </application>
 
 </manifest>
