--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
+    repositories {
+        mavenCentral()
+    }
+
     defaultConfig {
         applicationId "canul.android"
         minSdkVersion 22
@@ -25,5 +29,6 @@ dependencies {
     compile 'org.json:json:20141113'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
-
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
+    
 }
