--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
-    
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
