--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+
+
+        android:theme="@style/AppTheme"
+        >
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -21,10 +25,13 @@
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
             android:name=".activities.ShowExtractsActivity"
+            android:exported="true"
             android:label="Le Canul" />
         <activity
             android:name=".activities.ShowArticleActivity"
-            android:label="Le Canul" />
+            android:label="Le Canul"
+            android:parentActivityName=".activities.ShowExtractsActivity"/>
+
         <activity
             android:name=".activities.EditCommentActivity"
             android:label="@string/title_activity_comment_post" />
